crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/snapshots/antlr4_rust_gen_cli__optimizations__ll1_no_fallback_decisions_manifest.snap
---
source: tests/antlr4_rust_gen_cli/optimizations.rs
expression: manifest
---
{
  "version": 2,
  "fixedLookahead": null,
  "grammars": [
    {
      "name": "TParser",
      "summary": {"total": 7, "ll1": 7, "fixed": 0, "adaptive": 0},
      "decisions": [
        {"decision": 0, "rule": "required", "state": 24, "canDefer": false, "tier": "ll1"},
        {"decision": 1, "rule": "directOptional", "state": 27, "canDefer": false, "tier": "ll1"},
        {"decision": 2, "rule": "directStar", "state": 34, "canDefer": false, "tier": "ll1"},
        {"decision": 3, "rule": "directPlus", "state": 42, "canDefer": false, "tier": "ll1"},
        {"decision": 4, "rule": "nestedOptional", "state": 50, "canDefer": false, "tier": "ll1"},
        {"decision": 5, "rule": "nestedStar", "state": 58, "canDefer": false, "tier": "ll1"},
        {"decision": 6, "rule": "nestedPlus", "state": 67, "canDefer": false, "tier": "ll1"}
      ]
    }
  ]
}
