crates/antlr-rust-codegen/tests/antlr4_rust_gen_cli/snapshots/antlr4_rust_gen_cli__optimizations__semantic_override_does_not_leak_prior_recovery_diagnostics.snap
---
source: tests/antlr4_rust_gen_cli/optimizations.rs
expression: semantic_override
---
EntrySnapshot {
    returned_error: Unsupported(
        "unsupported semantic predicate: rule=semantic_child(4) pred_index=0",
    ),
    syntax_errors: 3,
    events: [
        Event {
            offending_text: Some(
                "d",
            ),
            line: 1,
            column: 1,
            span: Some(
                1..2,
            ),
            message: "mismatched input 'd' expecting {'b', 'c'}",
            error: None,
        },
        Event {
            offending_text: Some(
                "a",
            ),
            line: 1,
            column: 2,
            span: Some(
                2..3,
            ),
            message: "rule failed predicate: semantic predicate",
            error: None,
        },
    ],
}
